force-app/main/default/objects/refedge__Attendee__c/fields/refedge__Account__c.field-meta.xml
<CustomField>
    <fullName>refedge__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>