force-app/main/default/objects/refedge__Attendee__c/fields/refedge__Attendance_Status__c.field-meta.xml
<CustomField>
    <fullName>refedge__Attendance_Status__c</fullName>
    <label>Attendance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Did Not Attend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>