force-app/main/default/objects/refedge__Attendee__c/fields/refedge__Attended__c.field-meta.xml
<CustomField>
    <fullName>refedge__Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>