force-app/main/default/objects/refedge__Attendee__c/fields/refedge__Contact__c.field-meta.xml
<CustomField>
    <fullName>refedge__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>