force-app/main/default/objects/refedge__Attendee__c/fields/refedge__Event__c.field-meta.xml
<CustomField>
    <fullName>refedge__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>refedge__Event__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>